@@ -4,7 +4,7 @@
 // Modified by Ola Skavhaug, 2007, 2009.
 //
 // First added:  2003-03-13
-// Last changed: 2010-11-25
+// Last changed: 2011-01-21
 
 #ifndef __LOG_H
 #define __LOG_H
@@ -66,6 +66,9 @@ namespace dolfin
 
   /// Set log level
   void set_log_level(int level);
+
+  /// Set output stream
+  void set_output_stream(std::ostream& out);
 
   /// Get log level
   int get_log_level();
